fix: ajout des num de skills dans l'ajout d'un rdv coté interprete